updated button styels for add and edit employee

--- a/frontend-sifat/src/Components/EmployeeInputsStyle.css
+++ b/frontend-sifat/src/Components/EmployeeInputsStyle.css
@@ -23,3 +23,16 @@
 .employee-form .form-group {
   margin-bottom: 100px;
 }
+
+.submit-button {
+  margin-top: 20px;
+  margin-bottom: 10px;
+  padding: 10px;
+  border-radius: 8px;
+  border: 1px solid #ccc;
+  background-color: #ccc;
+  color: #fff;
+  font-weight: bold;
+  cursor: pointer;
+  transition: background-color 0.3s ease-in-out;
+}
